--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,7 +56,7 @@
       property="og:description"
       content="A blog sharing my 20s experiences and coding projects."
     />
-    <meta property="og:image" content="/images/thumbnail.jpg" />
+    <meta property="og:image" content="/src/assets/images/thumbnail.jpg" />
     <meta property="og:url" content="http://onehumanmean.com" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Nguyen Anh Nhat" />
@@ -66,7 +66,7 @@
       name="twitter:card"
       content="Join me as I share my experiences of my 20s and my coding projects"
     />
-    <meta name="twitter:image" content="/images/thumbnail.jpg" />
+    <meta name="twitter:image" content="/src/assets/images/thumbnail.jpg" />
     <meta name="twitter:title" content="One Human Mean" />
     <meta
       name="twitter:description"
